--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webpack with React JS</title>
   </head>
-  <body></body>
+  <body id="root"></body>
 </html>
